--- a/assets/css/sass/wc-category-showcase.scss
+++ b/assets/css/sass/wc-category-showcase.scss
@@ -5,3 +5,199 @@
  * Copyright (c) 2017 PluginEver
  * Licensed under the GPLv2+ license.
  */
+
+@import "grid/gridlex";
+@import "slick/slick";
+@import "slick/slick-theme";
+.woo-cs {
+    max-width: 1170px;
+    margin: 0 auto;
+
+    .woo-cs-inner {
+        min-height: 550px;
+        border-top: 1px solid #eee;
+    }
+
+    img {
+        max-width: 100%;
+        max-height: 100%;
+        height: auto;
+        border-radius: 0 !important;
+        box-shadow: none !important;
+    }
+
+    .woo-cs-cat-details {
+        position: absolute;
+        width: 80%;
+        left: 50%;
+        transform: translate(-50%, 0);
+        text-align: center;
+        bottom: 50px;
+        padding: 20px;
+        display: block;
+        overflow: hidden;
+        background-color: rgba(150, 88, 138, 0.9);
+        color: #fff;
+
+        .woo-cs-cat-title {
+            display: block;
+            font-size: 24px;
+            font-weight: 700;
+            color: inherit;
+            line-height: 26px;
+            max-height: 52px;
+            overflow: hidden;
+            text-transform: uppercase;
+            margin: 0 20px;
+            font-family: inherit;
+        }
+
+        .woo-cs-cat-des {
+            display: block;
+            padding-top: 10px;
+            margin: 10px 20px 0 20px;
+            font-size: 1em;
+            font-family: inherit;
+            line-height: 18px;
+            max-height: 46px;
+            overflow: hidden;
+            border-top: 1px solid rgba(255, 255, 255, .3);
+            color: inherit;
+        }
+
+    }
+
+    .woo-cs-box {
+        display: block;
+        overflow: hidden;
+        text-align: center;
+        height: inherit;
+        position: relative;
+        &-link {
+            display: inherit;
+            text-align: inherit;
+            height: inherit;
+            position: relative;
+            text-decoration: none;
+            &:active, &:focus{
+                outline: none !important;
+            }
+
+        }
+        * {
+            box-sizing: border-box;
+        }
+
+    }
+
+    .woo-cs-right-block {
+        .woo-cs-box {
+            border: 1px solid transparent;
+            transition: all 0.3s;
+            &:hover {
+                box-shadow: 0 3px 6px 0 rgba(51, 51, 51, .3);
+                border: 1px solid transparent;
+            }
+        }
+
+        .woo-cs-thumb-container {
+            display: block;
+            padding: 10px;
+            overflow: hidden;
+            text-align: center;
+            position: absolute;
+            left: 0;
+            right: 0;
+
+            &.img-top {
+                top: 0;
+            }
+            &.img-bottom {
+                bottom: 0;
+            }
+
+            &.img-middle {
+                top: 50%;
+                transform: translate(0, -50%);
+            }
+        }
+
+        .woo-cs-cat-name {
+            position: absolute;
+            text-align: center;
+            width: 100%;
+            left: 0;
+            right: 0;
+            bottom: 10px;
+            color: #333;
+            &.text-pos-top{
+                top:10px;
+            }
+        }
+    }
+
+    .woo-cs-left-block{
+        .woo-cs-slide-img-container {
+            display: block;
+            overflow: hidden;
+            text-align: center;
+            border: 2px solid transparent;
+        }
+
+    }
+
+    .woo-cs-slider, .woo-cs-slider li {
+        margin: 0;
+        //padding: 0;
+        list-style: none;
+    }
+
+    .slick-dots {
+        bottom: 10px;
+    }
+
+    &.has-border{
+        border-top: 3px solid red;
+        .woo-cs-slider-block{
+            border-left: 1px solid #eee;
+            border-bottom: 1px solid #eee;
+            border-right: 1px solid #eee;
+        }
+
+        .woo-cs-box {
+            border: 1px solid #eee;
+            border-top: 1px solid transparent;
+            border-left: 1px solid transparent;
+        }
+    }
+
+
+    .woo-cs-heading {;
+        font-size: 20px;
+        color: inherit;
+        line-height: 27px;
+        margin: 0;
+        padding: 10px 0;
+        text-align: left;
+        font-weight: inherit;
+    }
+}
+
+.slick-arrow{
+    //background: rgba(00,00,00,0.5);
+    z-index: 99;
+    color: #fff;
+    height: 40px;
+    width: 25px;
+
+    &.slick-prev{
+        left: 10px !important;
+    }
+    &.slick-next{
+        right: 10px !important;
+    }
+    &>div::after{
+        color: rgba(00,00,00,0.5);;
+    }
+
+}
