--- a/assets/css/sass/wc-category-showcase.scss
+++ b/assets/css/sass/wc-category-showcase.scss
@@ -31,7 +31,7 @@
         left: 50%;
         transform: translate(-50%, 0);
         text-align: center;
-        bottom: 50px;
+        bottom: 30px;
         padding: 20px;
         display: block;
         overflow: hidden;
@@ -101,7 +101,7 @@
 
         .woo-cs-thumb-container {
             display: block;
-            padding: 10px;
+            padding: 2px;
             overflow: hidden;
             text-align: center;
             position: absolute;
@@ -128,7 +128,7 @@
             width: 100%;
             left: 0;
             right: 0;
-            bottom: 5px;
+            bottom: 0px;
             color: #333;
             background: #fff;
             font-weight: normal;
@@ -136,6 +136,18 @@
                 top:10px;
             }
         }
+    }
+
+    //Slick Fix
+    .slick-track{
+    display: flex;
+
+    .slick-slide{
+        display: flex;
+        height: auto;
+        align-items: center; //optional
+        justify-content: center; //optional
+    }
     }
 
 
@@ -153,10 +165,14 @@
         margin: 0;
         //padding: 0;
         list-style: none;
+        position:relative;
+    }
+    .slick-slide{
+        position:relative;
     }
 
     .slick-dots {
-        bottom: 10px;
+        display: mone;
     }
 
     &.has-border{
@@ -206,3 +222,4 @@
     }
 
 }
+
