--- a/assets/css/wc-category-showcase.css
+++ b/assets/css/wc-category-showcase.css
@@ -1580,7 +1580,7 @@
     left: 50%;
     transform: translate(-50%, 0);
     text-align: center;
-    bottom: 50px;
+    bottom: 30px;
     padding: 20px;
     display: block;
     overflow: hidden;
@@ -1632,7 +1632,7 @@
       border: 1px solid transparent; }
   .woo-cs .woo-cs-right-block .woo-cs-thumb-container {
     display: block;
-    padding: 10px;
+    padding: 2px;
     overflow: hidden;
     text-align: center;
     position: absolute;
@@ -1652,12 +1652,19 @@
     width: 100%;
     left: 0;
     right: 0;
-    bottom: 5px;
+    bottom: 0px;
     color: #333;
     background: #fff;
     font-weight: normal; }
     .woo-cs .woo-cs-right-block .woo-cs-cat-name.text-pos-top {
       top: 10px; }
+  .woo-cs .slick-track {
+    display: flex; }
+    .woo-cs .slick-track .slick-slide {
+      display: flex;
+      height: auto;
+      align-items: center;
+      justify-content: center; }
   .woo-cs .woo-cs-left-block .woo-cs-slide-img-container {
     display: block;
     overflow: hidden;
@@ -1665,9 +1672,12 @@
     border: 2px solid transparent; }
   .woo-cs .woo-cs-slider, .woo-cs .woo-cs-slider li {
     margin: 0;
-    list-style: none; }
+    list-style: none;
+    position: relative; }
+  .woo-cs .slick-slide {
+    position: relative; }
   .woo-cs .slick-dots {
-    bottom: 10px; }
+    display: mone; }
   .woo-cs.has-border .woo-cs-heading {
     border-top: 3px solid #b769a9; }
   .woo-cs.has-border .woo-cs-slider-block {
