--- a/assets/css/sass/wc-category-showcase.scss
+++ b/assets/css/sass/wc-category-showcase.scss
@@ -5,18 +5,27 @@
  * Copyright (c) 2017 PluginEver
  * Licensed under the GPLv2+ license.
  */
-
-@import "grid/gridlex";
+//@import "grid/gridlex";
+@import "sassflex/main";
 @import "slick/slick";
 @import "slick/slick-theme";
+
 .woo-cs {
     max-width: 1170px;
     margin: 0 auto;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 1.5s ease;
+    -webkit-transition: opacity 1.5s ease;
     .woo-cs-inner {
         //min-height: 550px;
         border-top: 1px solid #eee;
     }
 
+    &.initialized {
+        visibility: visible !important;
+        opacity: 1 !important;
+    }
     img {
         max-width: 100%;
         max-height: 100%;
@@ -34,7 +43,7 @@
         bottom: 30px;
         padding: 20px;
         display: block;
-        overflow: hidden;
+        //overflow: hidden;
         background-color: rgba(150, 88, 138, 0.9);
         color: #fff;
 
@@ -64,21 +73,38 @@
             color: inherit;
         }
 
+        .woo-cs-cat-button {
+            color: #fff;
+            font-weight: bold;
+            border: 1px solid #fff;
+            padding: 0 20px;
+            display: inline-block;
+            margin-top: 10px;
+            transition: 0.3s all;
+        }
+
+        .woo-cs-cat-button:hover{
+            text-decoration: none;
+            background: #fff;
+            color: rgba(150, 88, 138, 0.9);
+        }
+
     }
 
     .woo-cs-box {
         display: block;
-        overflow: hidden;
+        //overflow: hidden;
         text-align: center;
         height: inherit;
         position: relative;
+        overflow: hidden;
         &-link {
             display: inherit;
             text-align: inherit;
             height: inherit;
             position: relative;
             text-decoration: none;
-            &:active, &:focus{
+            &:active, &:focus {
                 outline: none !important;
             }
 
@@ -93,6 +119,15 @@
         .woo-cs-box {
             border: 1px solid transparent;
             transition: all 0.3s;
+            position: relative;
+            .woo-cs-slide{
+                //position: relative;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+            }
             &:hover {
                 box-shadow: 0 3px 6px 0 rgba(51, 51, 51, .3);
                 border: 1px solid transparent;
@@ -104,7 +139,7 @@
             padding: 2px;
             overflow: hidden;
             text-align: center;
-            position: absolute;
+            position: relative;
             left: 0;
             right: 0;
 
@@ -132,31 +167,35 @@
             color: #333;
             background: #fff;
             font-weight: normal;
-            &.text-pos-top{
-                top:10px;
+            &.text-pos-top {
+                top: 10px;
             }
         }
     }
 
     //Slick Fix
-    .slick-track{
-    display: flex;
-
-    .slick-slide{
+    .slick-track {
         display: flex;
-        height: auto;
-        align-items: center; //optional
-        justify-content: center; //optional
-    }
+
+        .slick-slide {
+            display: flex;
+            height: auto;
+            align-items: center; //optional
+            justify-content: center; //optional
+        }
     }
 
-
-    .woo-cs-left-block{
+    .woo-cs-left-block {
         .woo-cs-slide-img-container {
             display: block;
             overflow: hidden;
             text-align: center;
             border: 2px solid transparent;
+        }
+
+        img{
+            width: 100%;
+            height: auto;
         }
 
     }
@@ -165,21 +204,21 @@
         margin: 0;
         //padding: 0;
         list-style: none;
-        position:relative;
+        position: relative;
     }
-    .slick-slide{
-        position:relative;
+    .slick-slide {
+        position: relative;
     }
 
     .slick-dots {
         display: mone;
     }
 
-    &.has-border{
-        .woo-cs-heading{
+    &.has-border {
+        .woo-cs-heading {
             border-top: 3px solid #b769a9;
         }
-        .woo-cs-slider-block{
+        .woo-cs-slider-block {
             border-left: 1px solid #eee;
             border-bottom: 1px solid #eee;
             border-right: 1px solid #eee;
@@ -189,9 +228,13 @@
             border: 1px solid #eee;
             border-top: 1px solid transparent;
             border-left: 1px solid transparent;
+            //overflow: hidden;
+            img{
+                width: 100%;
+                height: auto;
+            }
         }
     }
-
 
     .woo-cs-heading {;
         font-size: 20px;
@@ -204,22 +247,39 @@
     }
 }
 
-.slick-arrow{
+.slick-arrow {
     //background: rgba(00,00,00,0.5);
     z-index: 99;
     color: #fff;
     height: 40px;
     width: 25px;
 
-    &.slick-prev{
+    &.slick-prev {
         left: 10px !important;
     }
-    &.slick-next{
+    &.slick-next {
         right: 10px !important;
     }
-    &>div::after{
-        color: rgba(00,00,00,0.5);;
+    & > div::after {
+        color: rgba(00, 00, 00, 0.5);;
     }
 
 }
+@media only screen and (min-width: 760px) {
+    .woo-cs-inner{
+        min-height: 500px;
+    }
+    .woo-cs-box{
+        min-height: 248px;
+    }
+}
+@media only screen and (max-width: 760px) {
+    .woo-cs{
+
+    }
+    .woo-cs-box{
+        min-height: 248px;
+    }
+}
+
 
