--- a/assets/css/wc-category-showcase.css
+++ b/assets/css/wc-category-showcase.css
@@ -898,6 +898,20 @@
       color: black;
       opacity: 0.75; }
 
+@font-face {
+  font-family: 'FontAwesome';
+  src: url("../fonts/fontawesome-webfont.eot?v=4.7.0");
+  src: url("../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("../fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("../fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("../fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+.fa {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
 .woo-cs {
   max-width: 1170px;
   margin: 0 auto;
@@ -1025,6 +1039,23 @@
       height: auto;
       align-items: center;
       justify-content: center; }
+  .woo-cs .slick-prev, .woo-cs .slick-next {
+    font-family: "FontAwesome";
+    color: #fff;
+    transition: 0.3s all;
+    height: 30px;
+    width: 30px;
+    text-align: center; }
+    .woo-cs .slick-prev:hover, .woo-cs .slick-next:hover {
+      background: rgba(150, 88, 138, 0.9); }
+    .woo-cs .slick-prev:active, .woo-cs .slick-next:active {
+      box-shadow: none; }
+  .woo-cs .slick-next:before {
+    font-family: "FontAwesome";
+    content: "\f105"; }
+  .woo-cs .slick-prev:before {
+    font-family: "FontAwesome";
+    content: "\f104"; }
   .woo-cs .woo-cs-left-block .woo-cs-slide-img-container {
     display: block;
     overflow: hidden;
