fix image height issue

--- a/assets/css/sass/wc-category-showcase.scss
+++ b/assets/css/sass/wc-category-showcase.scss
@@ -168,6 +168,7 @@
             position: relative;
             left: 0;
             right: 0;
+            min-height: 100%;
 
             &.img-top {
                 top: 0;
