minor css fixing

--- a/assets/css/wc-category-showcase.scss
+++ b/assets/css/wc-category-showcase.scss
@@ -108,6 +108,8 @@
             display: inline-block;
             margin-top: 10px;
             transition: 0.3s all;
+            text-decoration: none !important;
+            box-shadow: none;
         }
 
         .woo-cs-cat-button:hover {
@@ -131,6 +133,7 @@
             height: inherit;
             position: relative;
             text-decoration: none;
+            box-shadow: none;
             &:active, &:focus {
                 outline: none !important;
             }
@@ -267,7 +270,7 @@
     }
 
     .slick-dots {
-        display: mone;
+        display: none;
     }
 
     &.has-border {
@@ -292,7 +295,7 @@
         }
     }
 
-    .woo-cs-heading {;
+    .woo-cs-heading {
         font-size: 20px;
         color: inherit;
         line-height: 27px;
@@ -300,6 +303,9 @@
         padding: 10px 0;
         text-align: left;
         font-weight: inherit;
+        &:before{
+            display: none;
+        }
     }
 }
 
