added fonts tab settings

--- a/src/css/admin/admin.scss
+++ b/src/css/admin/admin.scss
@@ -90,10 +90,10 @@
 
 ///arrow dropdown
 
-.wccs-arrow {
+.wccshowcase-arrow {
 	position: relative;
 }
-.wccs-arrow svg {
+.wccshowcase-arrow svg {
 	content: "";
 	position: absolute;
 	top:-10px;
