--- a/src/css/admin/admin.scss
+++ b/src/css/admin/admin.scss
@@ -1,4 +1,5 @@
 @import "../../../lib/ByteKit/Core/assets/css/bytekit-core.css";
+@import "../common/tailwind.css";
 @import "common";
 
 .select2.select2-container.select2-container--default{
@@ -56,7 +57,7 @@
 .custom-options {
 	margin-top: 6px;
 	position: absolute;
-	display: block;
+	//display: block;
 	top: 100%;
 	left: -1px;
 	right: 0;
